# gramax-docportal-mcp

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: dev-agent.md  pm-agent.md  researcher-agent.md  sa-agent.md
.github/workflows/: ci.yml  publish.yml
docs/: lessons-learned.md
docs/architecture/: README.md
docs/architecture/adr/: 0000-template.md  0001-streaming-ai-tool.md  0002-optional-api-token.md
docs/superpowers/plans/: 2026-04-06-gramax-mcp.md  2026-04-07-code-review-refactoring.md  2026-05-08-agent-workflow.md  2026-05-08-gramax-ai-search.md  2026-06-10-live-smoke-bugfixes.md
docs/superpowers/specs/: 2026-04-06-gramax-mcp-design.md  2026-04-07-code-review-refactoring-design.md  2026-05-08-agent-workflow-design.md  2026-05-08-gramax-ai-search-design.md  2026-06-10-http-error-handling-design.md  2026-06-10-search-formatter-fix-design.md  2026-06-10-token-validation-design.md
src/gramax_docportal_mcp/: __init__.py  client.py  config.py  formatters.py  server.py
tests/: conftest.py  test_client.py  test_config.py  test_formatters.py  test_server.py
tests/fixtures/: ai_search_response.ndjson  search_response.json
