[project]
name = "gramax-docportal-mcp"
version = "0.1.0"
description = "MCP server for Gramax documentation portal — search, read articles, browse catalogs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Maksim Demyanov", email = "mdemyanov@users.noreply.github.com" },
]
keywords = ["mcp", "gramax", "documentation", "doc-portal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.0.0",
    "markdownify>=0.14.1",
]

[project.scripts]
gramax-docportal-mcp = "gramax_docportal_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
